--- a/admin/index.css
+++ b/admin/index.css
@@ -1,3 +1,11 @@
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 nav{
     width: 100%;
     height: 10%;
@@ -33,56 +41,50 @@ nav h2 {
     text-decoration: none;
     color: hsl(0,0%,70%);
 }
-.hovers li:hover {
-    background-color: hsl(0,0%,10%); 
+
+.hovers li :hover {
+    padding: 10px;
+    background-color: transparent;    
+    color: hsl(0,0%,90%);    
     border: 1px solid hsl(0,0%,10%);
-    border-radius: 16px;
+    border-radius: 12px;
     box-shadow: 0 0 10px 0 hsl(0,0%,70%);
-    z-index: -1;
 }
-.hovers li:hover a {
-    color: hsl(0,0%,95%);
-}
+
 .products-container{
     width: 55%;
     height: 50vh;
     margin-left: 40px;
-    justify-content: center;
     background-color: hsl(0,0%,5%);
     border-radius: 26px;
-    
+    margin-top: 100px;
 }
-.products{
-    padding: 20px;  
-    margin-top: 40px;
-    width: 950px;
+.products-container table{
+    overflow-y: auto;
+    width: 100%;
     display: block;
-    justify-content: center;
-}
-.products th{
-    border: 1px solid hsl(0,0%, 5%);
-    padding: 20px;
-    text-align: center;
-    font-size: 1rem;
-    color: hsl(0,0%,70%);
-}
-.products td{
     border: 1px solid hsl(0,0%,5%);
-    padding: 20px;
-    text-align: center;
-    font-size: 1rem;
-    color: hsl(0,0%,70%);
+    border-radius: 16px;
+    border-collapse: collapse;
 }
 
-.products td button{
-    border: none;
-    width: 100px;
-    margin-top: -5px;
-    background-color: hsl(0, 0%, 5%);
-    color: hsl(0, 61%, 40%);
-    float: right;
-    cursor: pointer;
-    padding: 5px;
+.products-container th{
+    width: 20%;
+    padding: 20px;
+    margin: 0;
+    text-align: center;
+    font-size: 1.4rem;
+    color: hsl(0,0%,90%);
+}
+.products-container td{
+    border: 1px solid hsl(0,0%,5%);
+    border-collapse: collapse;
+    border-spacing: 0;
+    padding: 20px;
+    text-align: center;
+    font-size: 1rem;
+    color: hsl(0,0%,65%);
+
 }
 
 .display-revenue{
