--- a/admin/index.css
+++ b/admin/index.css
@@ -1,161 +1,39 @@
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-nav{
-    width: 100%;
-    height: 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.2rem;
-    background-color: hsl(0, 0%, 5%);
-}
-nav h2 {
-    font-size: 1.5rem;
-    color: hsl(0,0%,95%);
-    padding: 10px;
-    margin: 0;
-    position: fixed;
-}
-.hovers{
-    list-style: none;
-    padding: 10px;
-    margin: 0;
-    z-index: 1;
-}
-.hovers li{
-    padding: 10px;
-    margin: 8px;
-    display: block;
-    float: left;
-    transition: all 0.2s ease-in-out;
-    cursor:pointer;
-}  
-
-.hovers li a{
-    text-decoration: none;
-    color: hsl(0,0%,70%);
-}
-
-.hovers li :hover {
-    padding: 10px;
-    background-color: transparent;    
-    color: hsl(0,0%,90%);    
-    border: 1px solid hsl(0,0%,10%);
-    border-radius: 12px;
-    box-shadow: 0 0 10px 0 hsl(0,0%,70%);
-}
-
-.products-container{
-    width: 55%;
-    height: 50vh;
-    margin-left: 40px;
-    background-color: hsl(0,0%,5%);
-    border-radius: 26px;
-    margin-top: 100px;
-}
-.products-container table{
-    overflow-y: auto;
-    width: 100%;
-    display: block;
-    border: 1px solid hsl(0,0%,5%);
-    border-radius: 16px;
-    border-collapse: collapse;
-}
-
-.products-container th{
+.container {
     width: 20%;
-    padding: 20px;
-    margin: 0;
-    text-align: center;
-    font-size: 1.4rem;
-    color: hsl(0,0%,90%);
-}
-.products-container td{
-    border: 1px solid hsl(0,0%,5%);
-    border-collapse: collapse;
-    border-spacing: 0;
-    padding: 20px;
-    text-align: center;
-    font-size: 1rem;
-    color: hsl(0,0%,65%);
-
-}
-
-.display-revenue{
-    width: 30%;
-    height: 20vh;
-    background-color: hsl(0,0%,5%);
+    height: 40vh;
     display: flex;
-    float: right;
-    margin-right: 100px;
-    margin-top: -23%;
-    border-radius: 16px;
-}
-.display-revenue h1 {
-    color: hsl(0,0%,95%);
-    margin-left: 40px;
-    margin-top: 20px;
-}
-
-.display-revenue .revenue-details{
-    display: flex;
-    justify-content: center;
-    align-items: end;
-}
-
-.revenue-details span {
-    display: inline-flex;
-    align-items: flex-start; 
-    margin-left: -160px;
-    margin-top: -100px;
-    font-size: 1.1rem;
-    color: hsl(0,0%,70%);
-}
-
-.display-orders{
-    width: 30%;
-    height: 27vh;
-    background-color: hsl(0,0%,5%);
-    display: flex;
-    float: right;
-    margin-right: 100px;
-    margin-top: -12%;
-    border-radius: 16px;
-}
-.display-orders h1 {
-    color: hsl(0,0%,95%);
-    margin-left: 40px;
-    margin-top: 20px;
-}
-.display-orders .orders-details{
-    font-size: 1.1rem;
-    color: hsl(0,0%,70%);
-    display: block;
-    justify-content: left;
-    align-content: center;
-    margin-left: -125px;
-    margin-top: 40px;
-}
-.display-order-details{
-    width: 60%;
-    height: 50vh;
-
-    background-color: hsl(0,0%,5%);
-    display: block;
-    padding: 5px;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 16px;
-    margin-top: 50px;
+    align-items: center;
+    padding: 15px 30px ;
+    background-color: hsl(0,0%,10%);
+    border-radius: 10px;
 }
-.display-order-details h1{
-    color: hsl(0,0%,95%);
-    margin-left: 40px;
-    margin-top: 20px;
+.container:hover {
+    box-shadow: 0 0 10px 0 hsl(0,0%,70%);
+    transition: 0.3s;
+}
+.container form input[type="text"], input[type="password"] {
+    width: 90%;
+    padding: 10px;
+    margin: 10px;
+    border: 2px solid hsl(0,0%, 10%);
+    border-radius: 5px;
+    text-decoration: none;
+}
+.container form input[type="submit"] {  
+    width: 40%;
+    padding: 10px;
+    margin: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    color: hsl(0,0%,0%);
+    font-family: 'Oregano', italic; 
+    font-size: 1.1rem;
+}
+.container form input[type="submit"]:hover {
+    box-shadow: 0 0 10px 0 hsl(0,0%,70%);
+    transition: 0.3s;
+    
 }
