--- a/admin/dashboard.css
+++ b/admin/dashboard.css
@@ -13,51 +13,58 @@ nav{
     justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
-    background-color: hsl(0, 0%, 5%);
+    background-color: hsl(0, 0%, 4%);
+    padding: 0 20px;
 }
 nav h2 {
     font-size: 1.5rem;
     color: hsl(0,0%,95%);
-    padding: 10px;
-    margin: 0;
-    position: fixed;
+    margin-left: 40px;
 }
-.hovers{
-    list-style: none;
-    padding: 10px;
-    margin: 0;
-    z-index: 1;
+.nav-links {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    letter-spacing: 0.5px;
 }
-.hovers li{
-    padding: 10px;
-    margin: 8px;
-    display: block;
-    float: left;
-    transition: all 0.2s ease-in-out;
-    cursor:pointer;
-}  
-
-.hovers li a{
+.nav-links a {
+    color: hsl(0,0%,60%);
     text-decoration: none;
-    color: hsl(0,0%,70%);
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    position: relative;
+    transition: all 0.3s ease;
 }
 
-.hovers li :hover {
-    padding: 10px;
-    background-color: transparent;    
-    color: hsl(0,0%,90%);    
-    border: 1px solid hsl(0,0%,10%);
-    border-radius: 12px;
-    box-shadow: 0 0 10px 0 hsl(0,0%,70%);
+.nav-links a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 3px;
+    background-color: hsl(0,0%,85%);
+    transition: width 0.3s ease;
+}
+
+.nav-links a:hover::after {
+    width: 100%;
+}
+.nav-links a:hover{
+    color: hsl(0, 0%, 85%);
 }
 
 .products-container{
     width: 55%;
     height: 50vh;
     margin-left: 40px;
-    background-color: hsl(0,0%,5%);
-    border-radius: 26px;
+    background-color: hsl(0,0%,4%);
+    border-radius: 16px;
+    
     margin-top: 100px;
+    display: flex;
+    justify-content: space-evenly;
 }
 .products-container table{
     overflow-y: auto;
@@ -65,26 +72,25 @@ nav h2 {
     display: block;
     border: 1px solid hsl(0,0%,5%);
     border-radius: 16px;
-    border-collapse: collapse;
 }
 
 .products-container th{
-    width: 20%;
-    padding: 20px;
+    width: 22.5%;
+    padding: 15px;
     margin: 0;
     text-align: center;
-    font-size: 1.4rem;
-    color: hsl(0,0%,90%);
+    font-size: 1.3rem;
+    color: hsl(0,0%,85%);
+    border: 1px solid white;
 }
 .products-container td{
     border: 1px solid hsl(0,0%,5%);
     border-collapse: collapse;
     border-spacing: 0;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     font-size: 1rem;
     color: hsl(0,0%,65%);
-
 }
 
 .display-revenue{
@@ -107,6 +113,8 @@ nav h2 {
     display: flex;
     justify-content: center;
     align-items: end;
+    margin-bottom: 20px;
+    margin-left: 30px;
 }
 
 .revenue-details span {
@@ -136,26 +144,12 @@ nav h2 {
 .display-orders .orders-details{
     font-size: 1.1rem;
     color: hsl(0,0%,70%);
-    display: block;
-    justify-content: left;
-    align-content: center;
-    margin-left: -125px;
-    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    row-gap: 20px;
 }
-.display-order-details{
-    width: 60%;
-    height: 50vh;
-
-    background-color: hsl(0,0%,5%);
-    display: block;
-    padding: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 16px;
-    margin-top: 50px;
-}
-.display-order-details h1{
-    color: hsl(0,0%,95%);
-    margin-left: 40px;
-    margin-top: 20px;
+.orders-details span {
+    padding: 0;
+    margin-left: -100px;
 }
