--- a/src/user/css/index.css
+++ b/src/user/css/index.css
@@ -16,118 +16,61 @@ body{
     font-style: normal;
     color: var(--950);
     background-color: var(--50);
-    overflow-x: hidden;
+    max-width: inherit;
 }
-nav{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}   
-nav h1{
-    background : linear-gradient(var(--200),var(--400), var(--600),var(--500));
-    background-clip: text;
-    color: transparent;
-    margin-left: 40px;
-    font-size: 1.7rem;
+body::-webkit-scrollbar{
+    scrollbar-width: none;
 }
-.nav-links {
-    display: flex;
-    float: left;
-    gap: 20px;
-    font-size: 1.3rem;
-    margin-right: 20px;
-}
-
-.dropdown button {
-    font-size: 1rem;
-    cursor: pointer;
-    border: none;
-}
-.dropdown a {
-    display: flex;
-    text-decoration: none;
-}
-.dropdown .contents{
-    cursor: pointer;
-    display: none;
-    position: absolute;
-    min-width: 40px;
-}
-.dropdown .contents a {
-    font-size: 1rem;
-    padding: 10px 10px; 
-    height: 20px; 
-    border: 1px solid black;
-    background:linear-gradient(-45deg,var(--50),var(--100), var(--200));
-
-}
-.dropdown:hover .contents{
-    display: block;
-}
-
-.nav-links a{
-    text-decoration: none;
-    height: 30px;
-    color: var(--950);
-    font-size: 1.7rem;
-}
-.nav-links a span{
-    display: flex;
-    width: 30px;
-    height: 100%;
-    font-size: 1.8rem;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.featured-products {
-    display: inline-block;
-    width: 100%;
+#featured-products {
+    width: inherit;
     height: 60vh;
     padding: 20px;
-    /*background: linear-gradient(var(--100), var(--50));*/
     background-color: var(--100);
 }
 .product-card {
     display: flex;
-    flex-direction: column;
+    float: left;
     width: 13%;
-    height: 40%;
+    height: 50%;
     margin-left: 3%;
     margin-top: 2%;
-    transition: all 0.2s ease-in-out;
     background-color: var(--50);
-    min-width: 200px;
-    position: relative;
+    min-width: 200px;   
 }
 .product-card img{
-    display: block;
-    width: 90%;
+    width: 100%;
     height: auto;
-    padding: 10px;
-    transition: all 0.2s ease-in-out;
-    background: transparent;
+    margin: 0 auto;
+    padding: 0 auto;
+}
+.product-card .overlay{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: inherit;
+    height: 3rem;
+    position: absolute;
+    align-self: last baseline;
+    align-content: center;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+    opacity: 0;
+    transition: 0.3s ease;
+    font-size: 1rem;
+    cursor: pointer;
+}
+.overlay a {
+    text-decoration: none;
+    color: var(--50);
+}
+#featured-products .product-card:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 15px;   
+    /*box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;*/
 }
 
-.product-card .overlay {
-  position: absolute;
-  bottom: -10%;
-  background: rgba(0, 0, 0, 0.5); /* Black see-through */
-  color: var(--50);
-  width: clamp(80%, 100%, 100px);
-  transition: .5s ease;
-  opacity:0;
-  padding: 20px;
-  text-align: center;
-  justify-content: last baseline;
-  font-size: 1rem;
-
-}
-.featured-products .product-card:hover {
-    box-shadow: 0 0 10px 0 var(--200);
-}
-
-.featured-products .product-card:hover .overlay{
+#featured-products .product-card:hover .overlay{
     opacity: 1;
+}
+#site-features{
+    width: inherit;
+    height: 30vh;
 }
