--- a/src/user/css/index.css
+++ b/src/user/css/index.css
@@ -15,17 +15,40 @@ body{
     font-weight: 400;
     font-style: normal;
     color: var(--950);
-    background-color: var(--50);
+    background-color: hsl(0, 0, 95);
     max-width: inherit;
+    
 }
 body::-webkit-scrollbar{
     scrollbar-width: none;
 }
-#featured-products {
+#home {
     width: inherit;
-    height: 60vh;
-    padding: 20px;
-    background-color: var(--100);
+    height: 100vh;
+
+}
+#home img{
+    display: block;
+    float: left;
+    width: 50vw;
+    height: 90vh;
+    opacity: 0.7;
+}
+#home h2 {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    align-self: center;
+    float: right;   
+}
+#home button{
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    align-self: flex-start;
+    float: right;
 }
 .product-card {
     display: flex;
@@ -69,8 +92,4 @@ body::-webkit-scrollbar{
 
 #featured-products .product-card:hover .overlay{
     opacity: 1;
-}
-#site-features{
-    width: inherit;
-    height: 30vh;
 }
