--- a/src/user/css/navbar.css
+++ b/src/user/css/navbar.css
@@ -4,68 +4,68 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-}   
-nav h1{
-    background : linear-gradient(var(--200),var(--400), var(--600),var(--500));
-    background-clip: text;
-    color: transparent;
-    font-size: 1.7rem;
-    margin-left: 40px;
 }
-.nav-links {
-    display: flex;
-    gap: 1rem;
-    font-size: 1rem;
-    margin: auto 30px;
+.side-panel{
+    height: 100vh; /* Specify a height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: hsl(0, 0%, 90%); /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s;
 }
-
-
-.dropdown button {
-    font-size: 1rem;
-    border: none;
-    cursor: pointer;
-    margin: 5px auto;
-    background-color: black;
-}
-.dropdown a {
-    display: flex;
+.side-panel a{
+    color: var(--950);
+    display: block;
+    width: 100%;
+    height: 5%;
     text-decoration: none;
+    padding: 5px;
+    font-size: 1.2rem;
 }
-.dropdown .contents{
+.side-panel a:hover{
+    color: white;
+}
+
+.menu {
     cursor: pointer;
-    display: none;
-    position: absolute;
+    padding: 5px;
+    border: none;
+}
+
+.menu button{
+    border: transparent;
     background-color: transparent;
 }
-.dropdown .contents a {
-    font-size: 1rem;
-    padding: 10px 10px; 
-    width: 20vh;
-    height: auto;
-    box-shadow: 0 3px 5px rgba(0,0,0,.24);
-    background-color: hsl(48, 17%, 94%);
-    border-radius: 10px;
-    border: 1px solid black;
-    gap: 2vh;
-    margin: 2px 0;
+.menu button:hover{
+    background-color: hsl(0, 0%, 90%);
+    cursor: pointer;
 }
-.dropdown:hover .contents{
-    display: block;
-
+.menu button:cl .side-panel{
+    display: flex;
 }
-
-.nav-links a{
+.user-features {
+    display: flex;
+    gap: 0.5rem;
+    font-size: 1.5rem;
+}
+.user-features a{
     text-decoration: none;
+    width: 35px;
     height: 30px;
     color: var(--950);
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+    margin: auto;
 }
-.nav-links a span{
+.user-features a span{
     display: flex;
-    width: 35px;
     height: 100%;
     font-size: 1.8rem;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+}
+.user-features a:hover span{
+    background-color: hsl(0, 0%, 90%);
 }
