--- a/src/user/css/color.css
+++ b/src/user/css/color.css
@@ -1,13 +1,13 @@
 :root{
-    --50: hsl(48, 100%, 96%);
-    --100: hsl(48, 97%, 89%);
-    --200: hsl(48, 98%, 76%);
-    --300: hsl(47, 100%, 59%);
-    --400: hsl(44, 100%, 50%);
-    --500: hsl(36, 100%, 50%);
-    --600: hsl(30, 100%, 44%);
-    --700: hsl(25, 100%, 37%);
-    --800: hsl(24, 100%, 30%);
-    --900: hsl(23, 91%, 25%);
-    --950: hsl(21, 97%, 14%);
+--color-50: hsl(41 100 96);
+--color-100: hsl(42 100 92);
+--color-200: hsl(41 100 89);
+--color-300: hsl(41 100 85);
+--color-400: hsl(41 100 81);
+--color-500: hsl(42 100 77);
+--color-600: hsl(42, 100%, 73%);
+--color-700: hsl(42 100 69);
+--color-800: hsl(42 100 65);
+--color-900: hsl(43 100 60);
+--color-950: hsl(45 100 50);
 }
