--- a/user/css/signing.css
+++ b/user/css/signing.css
@@ -19,6 +19,7 @@ body {
     overflow: hidden;
     box-shadow: 0 25px 50px 0 rgba(0,0,0,0.5);
     border: solid 1px black;  
+
 }
 .login-img{
     width: 60%;
@@ -50,13 +51,13 @@ body {
     border:1px solid black;
 }
 .buttons{
-    width: 90%;
+    width: 80%;
     height: 40px;
     margin: 10px;
 }
 .buttons:hover {
     cursor: pointer;
-    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 10px 3px rgba(0, 0, 0, 0.4);
 }
 .login-form p {
     text-align: center;
