--- a/user/css/navbar.css
+++ b/user/css/navbar.css
@@ -1,7 +1,7 @@
 
 nav{
     width: inherit;
-    height: 20%;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
