index page changes 1. featured products

--- a/user/css/color.css
+++ b/user/css/color.css
@@ -1,13 +1,13 @@
 :root{
---color-50: hsl(41 100 96);
---color-100: hsl(42 100 92);
---color-200: hsl(41 100 89);
---color-300: hsl(41 100 85);
---color-400: hsl(41 100 81);
---color-500: hsl(42 100 77);
---color-600: hsl(42, 100%, 73%);
---color-700: hsl(42 100 69);
---color-800: hsl(42 100 65);
---color-900: hsl(43 100 60);
---color-950: hsl(45 100 50);
+    --50: oklch(0.987 0.022 95.277);
+    --100: oklch(0.987 0.022 95.277);
+    --200: oklch(0.901 0.076 70.697);
+    --300: oklch(0.901 0.076 70.697);
+    --400: oklch(0.828 0.189 84.429);
+    --500: oklch(0.769 0.188 70.08);
+    --600: oklch(0.666 0.179 58.318);
+    --700: oklch(0.555 0.163 48.998);
+    --800: oklch(0.473 0.137 46.201);
+    --900: oklch(0.414 0.112 45.904);
+    --950: oklch(0.279 0.077 45.635);
 }
