--- a/user/css/index.css
+++ b/user/css/index.css
@@ -12,8 +12,8 @@
 * {
     margin: 0;
     padding: 0;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 body{
     box-sizing: border-box;
@@ -26,7 +26,7 @@ body::-webkit-scrollbar{
 }
 
 .home{
-    width:100vw;
+    width:100%;
     height: 50vh;
     display: flex;
     float: right;
