--- a/user/css/index.css
+++ b/user/css/index.css
@@ -17,7 +17,7 @@
 }
 body{
     box-sizing: border-box;
-    background-color: hsl(0, 0, 95);
+    background-color: hsl(0, 0%, 90%);
 
     font-family: 'Funnel Sans', sans-serif;
 }
