--- a/user/css/cart.css
+++ b/user/css/cart.css
@@ -1,4 +1,3 @@
-
 @import url('../css/color.css');
 .material-symbols-outlined {
   font-variation-settings:
@@ -16,17 +15,40 @@ body {
     font-family: 'Funnel Sans', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: hsl(0,0%,90%);
+    min-height: 100vh;
+}
+
+nav {
+    width: 100%;
+    height: 70px;
     display: flex;
     flex-direction: row;
-    background-color: hsl(0,0%,90%);
+    align-items: center;
+    background-color: #f9f9f9ff;
+    padding: 0 2rem;
+    box-sizing: border-box;
+    position: fixed; 
+    top: 0;         
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
 }
+
+nav h1 {
+    margin: 0;
+    padding: 0.5rem 1rem 0.5rem 0;
+    font-size: 1.7rem;
+    color: hsl(0,0%,10%);
+}
+
 /*Cart design */
 .cart-container {
-    width: 80%;
+    width: 60%;
+    height: fit-content;
     display: block;
     padding: 1.5rem;
-    margin: 0 auto;
-    margin-top: 4rem;
+    margin: 2rem auto;    
     background-color: #f9f9f9ff;
     border-radius: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
