--- a/user/css/cart.css
+++ b/user/css/cart.css
@@ -16,7 +16,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: hsl(0,0%,90%);
-    min-height: 100vh;
 }
 
 nav {
@@ -28,10 +27,10 @@ nav {
     background-color: #f9f9f9ff;
     padding: 0 2rem;
     box-sizing: border-box;
-    position: fixed; 
+    position: relative;
     top: 0;         
     left: 0;
-    z-index: 1000;
+    z-index: 10;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
 }
 
@@ -46,9 +45,10 @@ nav h1 {
 .cart-container {
     width: 60%;
     height: fit-content;
-    display: block;
     padding: 1.5rem;
-    margin: 2rem auto;    
+    margin: auto;
+    margin-top: 2rem;
+    display: block;    
     background-color: #f9f9f9ff;
     border-radius: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
