--- a/admin/css/index.css
+++ b/admin/css/index.css
@@ -3,7 +3,7 @@
 body {
     background-color: var(--50);
     color: --var(--950);
-    font-family: 'Merriweather', sans-serif;
+    font-family: 'Funnel Sans', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
