--- a/client/css/index.css
+++ b/client/css/index.css
@@ -14,11 +14,11 @@
     padding: 0;
     max-width: 100vw;
     max-height: 100vh;
+    box-sizing: border-box;
 }
 body{
     box-sizing: border-box;
-    background-color: hsl(0, 0%, 90%);
-
+    background-color: var(--50);
     font-family: 'Funnel Sans', sans-serif;
 }
 body::-webkit-scrollbar{
