--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,4 +1,4 @@
-@import url('color.css?v=12');
+@import url('color.css');
 
 /*Icons and fonts*/
 .material-symbols-outlined {
@@ -13,7 +13,6 @@
     margin: 0;
     padding: 0;
     max-width: 100vw;
-    max-height: 100vh;
     box-sizing: border-box;
 }
 body{
@@ -21,10 +20,13 @@ body{
     background-color: var(--50);
     font-family: 'Funnel Sans', sans-serif;
 }
-body::-webkit-scrollbar{
-    scrollbar-width: none;
+::-webkit-scrollbar {
+    width: 10px;
 }
-
+::-webkit-scrollbar-thumb {
+    background: hsl(0, 0%, 50%);
+    border-radius: 8px;
+}
 .home{
     width:100%;
     height: 50vh;
@@ -70,7 +72,7 @@ body::-webkit-scrollbar{
     flex-direction: column;
 }
 .featured-products h2{
-    margin: 0 3rem;
+    margin: 0 0 0 2rem;
     margin-bottom: 2rem;
     font-size: 1.5rem;
 }
@@ -110,9 +112,17 @@ body::-webkit-scrollbar{
 }
 footer{
     width: 100%;
-    height: 10vh;
-    background-color: var(--200);
+    height: fit-content;
+    background-color: hsl(175, 100%, 29%);
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+    padding: 2rem 0 2rem 2rem;
+}
+footer a {
+    text-decoration: none;
+    color: black;
+}
+footer a:hover {
+    text-decoration: underline;
 }
