--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -71,25 +71,26 @@ nav {
     display: none;
     top: 0;
     right: 0;
-    background-color: hsl(0, 0%, 10%);
+    background-color: var(--50);
     transition: 0.5s ease-in;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
 }
 
 .side-panel a {
+    color: hsl(0, 0%, 10%);
     display: block;
+    padding: 1rem;
     text-decoration: none;
     font-size: 1.5rem;
-    padding: 16px;
-    color: hsl(0, 0%, 90%);
 }
 
 .side-panel a:hover {
-    color: hsl(0, 0%, 10%);
     background-color: hsl(0, 0%, 80%);
 }
 
 .side-panel a:first-child {
-    margin-top: 30%;
+    margin-top: 30%;    
+
 }
 
 .menu-btn {
