--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -32,14 +32,10 @@ nav {
     left: 0;
     z-index: 10;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    justify-content: space-between;
 }
 
-nav h1 {
-    margin: 0;
-    padding: 0.5rem 1rem 0.5rem 0;
-    font-size: 1.7rem;
-    color: hsl(0,0%,10%);
-}
+
 
 /*Cart design */
 .cart-container {
