--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -64,33 +64,44 @@ nav {
 }
 
 .side-panel {
-    height: 100vh;
     width: 30vh;
     z-index: 1;
     position: absolute;
     display: none;
     top: 0;
     right: 0;
+    margin-top: 4%;
     background-color: var(--50);
     transition: 0.5s ease-in;
     box-shadow: -2px 0 5px rgba(0,0,0,0.5);
 }
+.side-panel .closebtn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+}
 
+.side-panel .closebtn:hover {
+    background: #d32f2f;
+}
 .side-panel a {
     color: hsl(0, 0%, 10%);
     display: block;
     padding: 1rem;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;;
 }
-
+.side-panel a span {
+    font-size: 1.5rem;
+    vertical-align: middle;
+}
+.side-panel a:nth-child(2) {
+    margin-top: 3rem;
+}
 .side-panel a:hover {
     background-color: hsl(0, 0%, 80%);
-}
-
-.side-panel a:first-child {
-    margin-top: 30%;    
-
 }
 
 .menu-btn {
